Aligned footer to bottom, fixed padding and margins on page, and aligned search buttons

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,20 @@
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 a{
     text-decoration: none;
+    font-family: arial, sans-serif;
+    font-size: 14px;
     color:rgb(65, 65, 65);
+}
+
+a:hover{
+    text-decoration: underline;
 }
 
 #top-box{
@@ -8,6 +22,7 @@ a{
     width: 100%;
     display: flex;
     justify-content: space-between;
+    padding: 0px 15px;
 }
 
 .top-items{
@@ -19,10 +34,6 @@ a{
 
 .gb_f{
     display: flex;
-    font-family: arial, sans-serif;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 24px;
     padding: 0px 10px 0px 10px;
 }
 
@@ -60,10 +71,14 @@ a{
 
 #content{
     display: flex;
+    padding: 0;
+    margin: 0;
+    width: 100%;
     height: 280px;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+    align-self: center;
 }
 
 #search-box{
@@ -121,10 +136,42 @@ a{
     border: 0;
 }
 
-.bot-box{
+#search-btn-bar{
     display: flex;
-    background-color:rgb(236, 236, 236);
+    width: 100%;
+    justify-content: center;
+}
+
+.search-buttons{
+    display: flex;
+    padding: 10px;
+    margin: 25px 10px 10px 10px;
+    background-color:rgb(247, 247, 247);
+    border-radius: 5px;
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.bot-box{
+    width: 100%;
+    display: flex;
+    background-color:rgb(247, 247, 247);
     justify-content: space-evenly;
+    border-bottom: 1px solid rgb(211, 211, 211);
+}
+
+div.bot-box{
+    justify-content:flex-start;
+    padding: 15px 30px;
+    font-family: arial, sans-serif;
+    font-size: 15px;
+    color:rgb(65, 65, 65);
 }
 
 .bot-items{
@@ -134,5 +181,5 @@ a{
 
 .bot-btn{
     display: flex;
-    padding: 10px;
+    padding: 15px;
 }
